added components and configured exports

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,3 +3,5 @@
 @use '_partials/responsive' as *;
 @use '_partials/typography' as *;
 @use '_partials/variables' as *;
+
+@use '_partials/components/card' as *;
