added further color variables

--- a/src/scss/_partials/_variables.scss
+++ b/src/scss/_partials/_variables.scss
@@ -1,11 +1,21 @@
 /****** COLORS ******/
 
 $ChineseBlack: #161619;
-$EerieBlack: #1c1c1c;
+$EerieBlack-01: #1c1c1c;
+$EerieBack-02: #1a1b21;
 $DarkGunmetal: #23252c;
+$Gunmetal: #2b283a;
 $Charcoal: #374151;
+$Independence: #4a4e74;
+$RaisingBlack: #1e1f26;
+
 $UnitedNationsBlue: #5093e2;
+$BleuDeFrance: #297fe5;
+
 $PeachOrange: #f3bf99;
+$LightSilver: #d5d4d8;
+$PrincetonOrange: #f47d27;
+
 $SpanishGray: #918e9b;
 $Gainsboro: #dcdcdc;
 $Cultured: #f5f5f5;
