--- a/src/scss/_partials/_typography.scss
+++ b/src/scss/_partials/_typography.scss
@@ -25,3 +25,62 @@
 }
 
 /********** FONT STYLING **********/
+
+#root {
+    font-family: 'Inter', sans-serif;
+}
+
+.ProfileName {
+    /*position: absolute;
+    width: 178.06px;
+    height: 25.81px;
+    left: 186px;
+    top: 382px;*/
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+    color: $White;
+}
+
+.ProfileTitle {
+    /*position: absolute;
+    width: 178.06px;
+    height: 14.19px;
+    left: 186px;
+    top: 414px;*/
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12.8px;
+    line-height: 15px;
+    text-align: center;
+    color: $PeachOrange;
+}
+
+.ProfileWebsiteLink {
+    /*position: absolute;
+    width: 228px;
+    height: 16px;
+    left: 161px;
+    top: 437px;*/
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 150%;
+    text-align: center;
+    color: $Cultured;
+}
+
+.ProfileAbout, .ProfileInterests {
+    color: $Cultured;
+}
+
+.ProfileAboutText {
+    color: $Gainsboro;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 150%;
+    letter-spacing: 0.5px;
+}
