--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,4 +4,5 @@
 @use '_partials/typography' as *;
 @use '_partials/variables' as *;
 
+@use '_partials/components/container' as *;
 @use '_partials/components/card' as *;
