--- a/src/scss/_partials/_typography.scss
+++ b/src/scss/_partials/_typography.scss
@@ -56,6 +56,7 @@
     line-height: 15px;
     text-align: center;
     color: $PeachOrange;
+    letter-spacing: 0.5px;
 }
 
 .ProfileWebsiteLink {
@@ -74,6 +75,11 @@
 
 .ProfileAbout, .ProfileInterests {
     color: $Cultured;
+    padding-bottom: 5px;
+}
+
+.ProfileInterests {
+    padding-top: 27px;
 }
 
 .ProfileAboutText {
