adjusted layout - grid minus absolute positioning

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,5 +4,6 @@
 @use '_partials/typography' as *;
 @use '_partials/variables' as *;
 
+@use '_partials/components/root' as *;
 @use '_partials/components/container' as *;
 @use '_partials/components/card' as *;
