further adjustments to content styling and positioning

--- a/src/scss/_partials/_responsive.scss
+++ b/src/scss/_partials/_responsive.scss
@@ -3,3 +3,21 @@
         grid-template-columns: auto !important;
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .Card {
+        width: 425px !important;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .Card {
+        background-color: transparent !important;
+    }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 449px) {
+    .Card {
+        width: 320px !important;
+    }
+}
