--- a/src/scss/_partials/_variables.scss
+++ b/src/scss/_partials/_variables.scss
@@ -17,6 +17,7 @@ $LightSilver: #d5d4d8;
 $PrincetonOrange: #f47d27;
 
 $SpanishGray: #918e9b;
+$LightSilver: #d1d5db;
 $Gainsboro: #dcdcdc;
 $Cultured: #f5f5f5;
 $White: #fff;
