--- a/src/scss/_partials/components/_card.scss
+++ b/src/scss/_partials/components/_card.scss
@@ -44,6 +44,7 @@
     /*padding-left: 36px;
     padding-right: 34px;
     padding-top: 33px;*/
+    padding-top: 33px;
     padding-bottom: 24px;
     width: 247px;
     height: 201px;
@@ -72,15 +73,16 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-right: 17px;
     padding: 9px 13px 9px 11px;
     gap: 8px;
     width: 115px;
     height: 34px;
     left: 151px;
     top: 468px;
-    background: #FFFFFF;
-    border: 1px solid #D1D5DB;
-    box-shadow: 0px 1px 2px rgb(0 0 0 / 5%);
+    background: $White;
+    border: 1px solid $LightSilver;
+    box-shadow: 0px 1px 2px #0000000d;
     border-radius: 6px;
     cursor: pointer;
 }
@@ -96,8 +98,13 @@
     height: 34px;
     left: 283px;
     top: 468px;
-    background: #5093E2;
-    box-shadow: 0px 1px 2px rgb(0 0 0 / 5%);
+    background: $UnitedNationsBlue;
+    box-shadow: 0px 1px 2px #0000000d;
     border-radius: 6px;
     cursor: pointer;
+}
+
+.ContactButtons {
+    display: flex;
+    padding-top: 15px;
 }
