--- a/src/scss/_partials/_typography.scss
+++ b/src/scss/_partials/_typography.scss
@@ -1,4 +1,5 @@
 @use 'variables' as *;
+@use 'mixins' as *;
 
 /********** FONT IMPORTS **********/
 
@@ -22,72 +23,4 @@
     src:    url('/src/fonts/Inter-Regular.woff'), format('woff'),
             url('/src/fonts/Inter-Regular.woff2'), format('woff2');
     font-display: swap;
-}
-
-/********** FONT STYLING **********/
-
-#root {
-    font-family: 'Inter', sans-serif;
-}
-
-.ProfileName {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 25px;
-    line-height: 30px;
-    text-align: center;
-    color: $White;
-}
-
-.ProfileTitle {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12.8px;
-    line-height: 15px;
-    text-align: center;
-    color: $PeachOrange;
-    letter-spacing: 0.5px;
-}
-
-.ProfileWebsiteLink {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 10.24px;
-    line-height: 150%;
-    text-align: center;
-    color: $Cultured;
-}
-
-.ProfileAbout, .ProfileInterests {
-    color: $Cultured;
-    padding-bottom: 5px;
-}
-
-.ProfileAboutText {
-    color: $Gainsboro;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 10.24px;
-    line-height: 150%;
-    letter-spacing: 0.5px;
-}
-
-.EmailButtonText {
-    width: 36px;
-    height: 16px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    color: $Charcoal;
-}
-
-.LinkedInButtonText {
-    width: 57px;
-    height: 16px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    color: $White;
 }
