started light mode config - ran build production for deployment

--- a/src/scss/_partials/components/_card-dark.scss
+++ b/src/scss/_partials/components/_card-dark.scss
@@ -70,17 +70,8 @@
         }
     }
     .FooterLinks {
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        align-items: center;
-        justify-items: center;
-        column-gap: 24px;
-        padding-inline: 72px;
-        background-color: #161619;
-        border-radius: 0px 0px 6px 6px;
-        display: flex;
-        height: 64px;
-        cursor: pointer;
+        @include FooterBar;
+        background-color: $ChineseBlack;
     }
     
 }
