--- a/src/scss/_partials/_mixins.scss
+++ b/src/scss/_partials/_mixins.scss
@@ -92,3 +92,16 @@
     font-size: 14px;
     line-height: 16px;
 }
+
+@mixin FooterBar {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    align-items: center;
+    justify-items: center;
+    column-gap: 24px;
+    border-radius: 0px 0px 6px 6px;
+    display: flex;
+    height: 64px;
+    cursor: pointer;
+    padding-inline: 72px;
+}
