--- a/src/scss/_partials/components/_card-light.scss
+++ b/src/scss/_partials/components/_card-light.scss
@@ -3,7 +3,110 @@
 
 /****** CARD - LIGHT BACKGROUND ******/
 
-.ProfileMainSection-Light {
-    @include ProfileMainSection;
-    background-color: $Cultured;
+
+
+/****** CARD - DARK BACKGROUND ******/
+
+.Card {
+    @include Card;
+    .ProfilePicture {
+        @include ProfilePicture;
+    }
+    .ProfileMainSection-Light {
+        @include ProfileMainSection;
+        background-color: $Cultured;
+    }
+    .ProfileSnapshot-Light {
+        @include ProfileSnapshot;
+        .ProfileName-Light {
+            @include ProfileName;
+            color: $Gunmetal;
+            padding-top: 21px;
+        }
+        .ProfileTitle-Light {
+            @include ProfileTitle;
+            color: $PrincetonOrange;
+            padding-top: 4.19px;
+        }
+        .ProfileWebsiteLink-Light {
+            @include ProfileWebsiteLink;
+            color: $Independence;
+            padding-top: 8.81px;
+        }   
+    }
+    .ContactButtons-Light {
+        display: flex;
+        padding-top: 15px;
+        .EmailButton {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            margin-right: 17px;
+            padding: 9px 13px 9px 11px;
+            gap: 8px;
+            width: 115px;
+            height: 34px;
+            left: 151px;
+            top: 468px;
+            background: $White;
+            border: 1px solid $LightSilver;
+            box-shadow: 0px 1px 2px #0000000d;
+            border-radius: 6px;
+            cursor: pointer;
+        }
+        
+        .LinkedInButton {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 9px 13px 9px 11px;
+            gap: 8px;
+            width: 115px;
+            height: 34px;
+            left: 283px;
+            top: 468px;
+            background: $UnitedNationsBlue;
+            box-shadow: 0px 1px 2px #0000000d;
+            border-radius: 6px;
+            cursor: pointer;
+        }
+    }
+    .ProfileSnapshotInfo-Light {
+        @include ProfileSnapshotInfo;
+        .ProfileInterests {
+            padding-top: 18px;
+        }
+    }
+    .FooterLinks-Light {
+        @include FooterBar;
+        background-color: $LightSilver;
+    }  
+}
+
+/********** FONT STYLING **********/
+
+#root {
+    font-family: 'Inter', sans-serif;
+}
+
+.ProfileAbout-Light, .ProfileInterests-Light {
+    color: $Gunmetal;
+    padding-bottom: 5px;
+}
+
+.ProfileAboutText-Light {
+    color: $Independence;
+    @include ProfileAboutText;
+}
+
+.EmailButtonText-Light {
+    @include EmailButtonText;
+    color: $Charcoal;
+}
+
+.LinkedInButtonText-Light {
+    @include LinkedInButtonText;
+    color: $White;
 }
