tidied up stylesheets for dark and light card versions - ran build prod for deployment

--- a/src/scss/_partials/_typography.scss
+++ b/src/scss/_partials/_typography.scss
@@ -24,3 +24,9 @@
             url('/src/fonts/Inter-Regular.woff2'), format('woff2');
     font-display: swap;
 }
+
+/********** FONT STYLING **********/
+
+#root {
+    font-family: 'Inter', sans-serif;
+}
