further styling amendments

--- a/src/scss/_partials/_globals.scss
+++ b/src/scss/_partials/_globals.scss
@@ -6,7 +6,7 @@
     &:is(&::after, &::before, *) {
         box-sizing: border-box;
     }
-    outline: red 1px solid;
+    // outline: red 1px solid;
 }
 
 body {
