--- a/src/scss/_partials/components/_card-light.scss
+++ b/src/scss/_partials/components/_card-light.scss
@@ -32,28 +32,15 @@
     }
     .ContactButtons-Light {
         @include ContactButtons;
-        .EmailButton-Light {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            padding: 9px 13px 9px 11px;
-            gap: 8px;
-            width: 120.5px;
-            height: 34px;
-            left: 151px;
-            top: 468px;
-            background: $White;
-            border: 1px solid $LightSilver;
-            box-shadow: 0px 1px 2px #0000000d;
-            border-radius: 6px;
+        .EmailButton {
+            @include EmailButton;
             cursor: pointer;
             .EmailButtonText-Light {
                 @include EmailButtonText;
                 color: $Charcoal;
             }
         }
-        .LinkedInButton-Light {
+        .LinkedInButton-Alt {
             display: flex;
             flex-direction: row;
             justify-content: center;
