--- a/src/scss/_partials/_responsive.scss
+++ b/src/scss/_partials/_responsive.scss
@@ -6,7 +6,7 @@
 
 @media only screen and (max-width: 800px) {
     .Card {
-        width: 425px !important;
+        width: 26.5625rem !important;
     }
 }
 
@@ -18,6 +18,6 @@
 
 @media only screen and (min-width: 320px) and (max-width: 449px) {
     .Card {
-        width: 320px !important;
+        width: 20rem !important;
     }
 }
