--- a/src/scss/_partials/components/_container.scss
+++ b/src/scss/_partials/components/_container.scss
@@ -2,6 +2,6 @@
     display: grid;
     grid-template-columns: auto auto;
     justify-content: center;
-    gap: 40px;
+    gap: 2.5rem;
     width: 100%;
 }
