--- a/src/scss/_partials/components/_card-dark.scss
+++ b/src/scss/_partials/components/_card-dark.scss
@@ -17,17 +17,17 @@
         .ProfileName {
             @include ProfileName;
             color: $White;
-            padding-top: 21px;
+            padding-top: 1.3125rem;
         }
         .ProfileTitle {
             @include ProfileTitle;
             color: $PeachOrange;
-            padding-top: 4.19px;
+            padding-top: .2619rem;
         }
         .ProfileWebsiteLink {
             @include ProfileWebsiteLink;
             color: $Cultured;
-            padding-top: 8.81px;
+            padding-top: .5506rem;
         }   
     }
     .ContactButtons {
@@ -44,15 +44,15 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            padding: 9px 13px 9px 11px;
-            gap: 8px;
-            height: 34px;
-            left: 151px;
-            top: 468px;
+            padding: .5625rem .8125rem .5625rem .6875rem;
+            gap: .5rem;
+            height: 2.125rem;
+            left: 9.4375rem;
+            top: 29.25rem;
             background: $White;
-            border: 1px solid $LightSilver;
-            box-shadow: 0px 1px 2px #0000000d;
-            border-radius: 6px;
+            border: .0625rem solid $LightSilver;
+            box-shadow: 0rem .0625rem .125rem #0000000d;
+            border-radius: .375rem;
             width: 100%;
             cursor: pointer;
             .EmailButtonText {
@@ -65,15 +65,15 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            padding: 9px 13px 9px 11px;
-            gap: 8px;
-            width: 120.5px;
-            height: 34px;
-            left: 283px;
-            top: 468px;
+            padding: .5625rem .8125rem .5625rem .6875rem;
+            gap: .5rem;
+            width: 7.5313rem;
+            height: 2.125rem;
+            left: 17.6875rem;
+            top: 29.25rem;
             background: $UnitedNationsBlue;
-            box-shadow: 0px 1px 2px #0000000d;
-            border-radius: 6px;
+            box-shadow: 0rem .0625rem .125rem #0000000d;
+            border-radius: .375rem;
             border: none;
             cursor: pointer;
             .LinkedInButtonText {
@@ -89,11 +89,11 @@
             @include ProfileAboutText;
         }
         .ProfileInterests {
-            padding-top: 18px;
+            padding-top: 1.125rem;
         }
         .ProfileAbout, .ProfileInterests {
             color: $Cultured;
-            padding-bottom: 5px;
+            padding-bottom: .3125rem;
         }
     }
     .FooterLinks {
